--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
+      - staging
 
 jobs:
   build-and-push:
@@ -31,4 +31,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/qemmuchat:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/qemmuchat:staging
