--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ tmp
 node_modules
 dist-ssr
 *.local
-webpush.db
+.webpush.db
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +22,3 @@ webpush.db
 *.sln
 *.sw?
 .env
-/bin/*
