--- a/qemmuWeb/package.json
+++ b/qemmuWeb/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^7.15.2",
     "@mantine/spotlight": "^7.15.2",
     "@mantine/tiptap": "^7.15.2",
+    "@mantinex/mantine-logo": "^1.1.0",
     "@tanstack/react-query": "^5.62.11",
     "@tiptap/extension-link": "^2.10.4",
     "@tiptap/pm": "^2.10.4",
