--- a/qemmuWeb/package.json
+++ b/qemmuWeb/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "mantine-datatable": "^7.15.1",
+    "phaser": "^3.87.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
