--- a/qemmuWeb/package.json
+++ b/qemmuWeb/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/space-grotesk": "^5.2.7",
     "@mantine/carousel": "^7.15.2",
     "@mantine/charts": "^7.15.2",
     "@mantine/code-highlight": "^7.15.2",
